k8s/03-user-db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: user-db
spec:
  serviceName: user-db
  replicas: 1
  selector:
    matchLabels:
      project: peerprep
      peerprep.service: user-db
  template:
    metadata:
      labels:
        project: peerprep
        peerprep.service: user-db
        peerprep.network.user-db: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: postgres
          image: postgres:16.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            periodSeconds: 10
            initialDelaySeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          ports:
            - name: user-db-ctr
              containerPort: 5432
          volumeMounts:
            - name: user-db-vol
              mountPath: /data/user-db  
  volumeClaimTemplates:
    - metadata:
        name: user-db-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"               # Update this based on your storage class
        resources:
          requests:
            storage: 500Mi                              # Define your storage requirement
