k8s/04-match-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-service
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      project: peerprep
      peerprep.service: matching-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: peerprep
        peerprep.service: matching-service
        peerprep.network.match-api: "true"
        peerprep.network.match-db: "true"
        peerprep.network.user-api: "true"
        peerprep.network.question-api: "true"
        peerprep.network.collab-api: "true"
    spec:
      containers:
        - name: match-express
          image: ay2425s1cs3219g16/match-express:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - wget --no-verbose --tries=1 --spider http://localhost:9004/health || exit 1
            periodSeconds: 30
            initialDelaySeconds: 5
            timeoutSeconds: 10
            failureThreshold: 5
          ports:
            - name: match-svc-ctr
              containerPort: 9004
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
