k8s/04-question-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-service
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: question-service
spec:
  replicas: 1
  selector:
    matchLabels:
      project: peerprep
      peerprep.service: question-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: peerprep
        peerprep.service: question-service
        peerprep.network.question-api: "true"
        peerprep.network.question-db: "true"
    spec:
      containers:
        - name: question-express
          image: ay2425s1cs3219g16/question-express:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - wget --no-verbose --tries=1 --spider http://localhost:9002/health || exit 1
            periodSeconds: 30
            initialDelaySeconds: 5
            timeoutSeconds: 10
            failureThreshold: 5
          ports:
            - name: qn-svc-ctr
              containerPort: 9002
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
