k8s/05-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      project: peerprep
      peerprep.service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: peerprep
        peerprep.service: frontend
        peerprep.network.match-api: "true"
        peerprep.network.user-api: "true"
        peerprep.network.question-api: "true"
        peerprep.network.collab-api: "true"
    spec:
      containers:
        - name: frontend
          image: ay2425s1cs3219g16/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: frontend-ctr
              containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
