k8s/collab-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: collab-db
  name: collab-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: collab-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/code-default: "true"
        io.kompose.service: collab-db
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /data/collab-db
            - name: POSTGRES_DB
              value: collab
            - name: POSTGRES_PASSWORD
              value: collab
            - name: POSTGRES_USER
              value: express
          image: postgres:16.4
          name: collab-db
          ports:
            - containerPort: 5432
              hostPort: 5433
              protocol: TCP
          volumeMounts:
            - mountPath: /data/collab-db
              name: collab-db-docker
      hostname: collabdb
      restartPolicy: Always
      volumes:
        - name: collab-db-docker
          persistentVolumeClaim:
            claimName: collab-db-docker
