k8s/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/code-default: "true"
        io.kompose.service: user-db
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /data/user-db
            - name: POSTGRES_DB
              value: user
            - name: POSTGRES_PASSWORD
              value: user
            - name: POSTGRES_USER
              value: express
          image: postgres:16.4
          name: user-db
          ports:
            - containerPort: 5432
              hostPort: 5431
              protocol: TCP
          volumeMounts:
            - mountPath: /data/user-db
              name: user-db-docker
      hostname: userdb
      restartPolicy: Always
      volumes:
        - name: user-db-docker
          persistentVolumeClaim:
            claimName: user-db-docker
