k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/code-user-api-network: "true"
        io.kompose.network/code-user-db-network: "true"
        io.kompose.service: user-service
    spec:
      containers:
        - command:
            - ./entrypoint.sh
          image: user-express
          name: user-express
          ports:
            - containerPort: 9001
              hostPort: 9001
              protocol: TCP
          volumeMounts:
            - mountPath: /data/question-express
              name: user-service
      restartPolicy: Always
      volumes:
        - name: user-service
          persistentVolumeClaim:
            claimName: user-service
