k8s/03-match-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match-db
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: match-db
spec:
  type: ClusterIP
  selector:
    project: peerprep
    peerprep.service: match-db
  ports:
    - name: match-db-6379
      port: 6379
      targetPort: user-db-6379
