k8s/03-user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: user-db
spec:
  type: ClusterIP
  selector:
    project: peerprep
    peerprep.service: user-db
  ports:
    - name: user-db-5432
      port: 5432
      targetPort: user-db-5432
