k8s/04-question-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-service
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: question-service
spec:
  type: ClusterIP
  selector:
    project: peerprep
    peerprep.service: question-service
  ports:
    - name: question-svc-prt
      port: 9002
      targetPort: question-svc-ctr
