k8s/04-user-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: peerprep
  labels:
    project: peerprep
    peerprep.service: user-service
spec:
  type: ClusterIP
  selector:
    project: peerprep
    peerprep.service: user-service
  ports:
    - name: user-svc-9001
      port: 9001
      targetPort: user-svc-9001
