k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      name: api-gateway
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/api-gateway:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 8001
          livenessProbe:  # Add this block for liveness probe
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:  # Add this block for readiness probe
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: api-gateway
