k8s/collab-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: collab-db
  name: collab-db
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
  selector:
    io.kompose.service: collab-db
