k8s/peerprep-fe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerprep-fe
  labels:
    type: frontend
    app: peerprep-fe
spec:
  selector:
    matchLabels:
      type: frontend
      app: peerprep-fe
  template:
    metadata:
      name: peerprep-fe
      labels:
        type: frontend
        app: peerprep-fe
    spec:
      containers:
        - name: peerprep-fe
          image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/peerprep-fe:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: peerprep-fe
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    type: frontend
    app: peerprep-fe
