k8s/question-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: question-db
  name: question-db
spec:
  ports:
    - name: "5434"
      port: 5434
      targetPort: 5432
  selector:
    io.kompose.service: question-db
