k8s/question-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-svc
  labels:
    type: backend
    app: question-svc
spec:
  selector:
    matchLabels:
      type: backend
      app: question-svc
  template:
    metadata:
      name: question-svc
      labels:
        type: backend
        app: question-svc
    spec:
      containers:
        - name: question-svc
          image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/question-svc:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 4001
      dnsPolicy: ClusterFirst
---
# This is an internal service, not exposed
apiVersion: v1
kind: Service
metadata:
  name: question-svc
spec:
  type: ClusterIP
  ports:
    - port: 4001
      targetPort: 4001
  selector:
    type: backend
    app: question-svc
