k8s/session-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-svc
  labels:
    app: session-svc
spec:
  selector:
    matchLabels:
      app: session-svc
  template:
    metadata:
      name: session-svc
      labels:
        app: session-svc
    spec:
      containers:
        - name: session-svc
          image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/session-svc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      dnsPolicy: ClusterFirst
---
# This is an internal service, not exposed
apiVersion: v1
kind: Service
metadata:
  name: session-svc
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: session-svc
