k8s/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  ports:
    - name: "5431"
      port: 5431
      targetPort: 5432
  selector:
    io.kompose.service: user-db
