k8s/nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-ingress
  annotations: 
    kubernetes.io/ingress.global-static-ip-name: nginx-peerprep
    networking.gke.io/managed-certificates: peerprep-fe-cs3219-g11-nginx
spec:
  rules:
    - host: peerprep-interview.duckdns.org
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: peerprep-fe
                port: 
                  number: 80
